Padding and overflow fixes

--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -29,7 +29,7 @@ body
   .brand-container
     z-index: 1000
     position: absolute
-    padding: 20px 0
+    padding: 20px
     left: 0
 
   .brand-container .brand-name
@@ -101,6 +101,7 @@ body
 section
   padding: 80px 0
   padding-top: 50px
+  overflow: hidden
 
 section
   background: #000
